Update connection string (SQL Server on aZURE)

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=mintvattid;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=tcp:tvattid.database.windows.net,1433;Initial Catalog=mintvatid;Persist Security Info=False;User ID=danmalmx;Password=ffd323&da%djD323H?UH;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "AppSettings": {
