--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "frontend_url": "http://localhost:5173"
 }
