--- a/.github/workflows/main_tvattid.yml
+++ b/.github/workflows/main_tvattid.yml
@@ -67,10 +67,10 @@ jobs:
   deploy:
     permissions:
       contents: none
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
-      name: "Development"
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
