--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -27,7 +27,7 @@
 name: Build and deploy a container to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: tvattid-dncfatcbbnhtc3hd.northeurope-01.azurewebsites.net  # set this to the name of your Azure Web App
+  AZURE_WEBAPP_NAME: tvattid  # set this to the name of your Azure Web App
 
 on:
   push:
