--- a/appsettings.json
+++ b/appsettings.json
@@ -13,5 +13,12 @@
     }
   },
   "AllowedHosts": "*",
-  "frontend_url": "http://localhost:5173"
+  "frontend_url": "http://localhost:5173",
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://tvattid-dncfatcbbnhtc3hd.northeurope-01.azurewebsites.net"
+      }
+    }
+  }
 }
