Update connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:mintvattid.database.windows.net,1433;Initial Catalog=tvattid;Persist Security Info=False;User ID=daniel@tvattid@mintvattid;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:mintvattid.database.windows.net,1433;Initial Catalog=mintvatid;Persist Security Info=False;User ID=danmalmx;Password=nlk!HDhAH$dhdh?=a946149dsdksadsd&;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "AppSettings": {
