--- a/appsettings.json
+++ b/appsettings.json
@@ -13,12 +13,5 @@
     }
   },
   "AllowedHosts": "*",
-  "frontend_url": "http://localhost:5173",
-  "Kestrel": {
-    "Endpoints": {
-      "Https": {
-        "Url": "https://tvattid-dncfatcbbnhtc3hd.northeurope-01.azurewebsites.net"
-      }
-    }
-  }
+  "frontend_url": "http://localhost:5173"
 }
